fixed image alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,18 @@ h6 {
 .image-css {
   margin: 0 auto;
   width: auto;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 200px;
+  height: 180px;
+  margin-bottom: 20px;
+}
+
+.image-css img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .img-misha {
